--- a/snippets/htmlbuilder-divided.liquid
+++ b/snippets/htmlbuilder-divided.liquid
@@ -29,8 +29,8 @@
     <textarea id="htmlCode-Divided" class="html-code"><hr class="border-primary"/></textarea>
   </div>
   <div class="col-md-2 col-mid">
-    <button class="btn btn-outline-secondary btn-html-view" data-id="Divided">Preview{%- include 'icon-arrow-right' -%}</button>
-    <button class="btn btn-secondary btn-html-copy" data-id="Divided">Copy {%- include 'icon-copy' -%}</button>
+    <button class="btn btn-outline-secondary btn-html-view" data-id="Divided">Preview{%- render 'icon-arrow-right' -%}</button>
+    <button class="btn btn-secondary btn-html-copy" data-id="Divided">Copy {%- render 'icon-copy' -%}</button>
   </div>
   <div class="col-md-3 col-right">
     <div id="htmlView-Divided" class="html-view shadow html-view--widow">
