--- a/snippets/htmlbuilder-layout.liquid
+++ b/snippets/htmlbuilder-layout.liquid
@@ -37,8 +37,8 @@
     </textarea>
   </div>
   <div class="col-md-12 col-mid-layout text-center mt-3 mb-3">
-    <button class="btn btn-outline-secondary btn-html-view" data-id="Layout">Preview{%- include 'icon-arrow-down' -%}</button>
-    <button class="btn btn-secondary btn-html-copy" data-id="Layout">Copy {%- include 'icon-copy' -%}</button>
+    <button class="btn btn-outline-secondary btn-html-view" data-id="Layout">Preview{%- render 'icon-arrow-down' -%}</button>
+    <button class="btn btn-secondary btn-html-copy" data-id="Layout">Copy {%- render 'icon-copy' -%}</button>
   </div>
   <div class="col-md-12 col-right">
     <div id="htmlView-Layout" class="html-view shadow html-view--layout rounded">
