--- a/snippets/second-image.liquid
+++ b/snippets/second-image.liquid
@@ -4,7 +4,7 @@
 {%- assign img_url = image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
 <img class="lazyload transition second-image" 
     data-src="{{ img_url }}"
-    src="{%- include 'srcBlank' -%}"
+    src="{%- render 'srcBlank' -%}"
     data-sizes="auto"
     alt="{{ image.alt | escape }}"  />
     {%- endif -%}
