--- a/snippets/sidebar.liquid
+++ b/snippets/sidebar.liquid
@@ -1,2 +1,2 @@
-{%- include 'sidebar-categories' -%}
-{%- include 'sidebar-shopby' -%}
+{%- render 'sidebar-categories' -%}
+{%- render 'sidebar-shopby' -%}
