--- a/snippets/swatch-grid-2.liquid
+++ b/snippets/swatch-grid-2.liquid
@@ -58,20 +58,20 @@
     <div class="product-card__overlay-2 d-flex justify-content-end-lg flex-row align-items-center">
      
       <span data-tooltip="true" data-placement="top" class="btn gradient-theme-vertical product-card__overlay-btn js-btn-quickview" title="{{ 'products.product.quickview_text' | t }}" data-toggle="modal" data-target="#jsQuickview" data-handle="{{product.handle}}">
-        {%- include 'icon-quickview' -%}
+        {%- render 'icon-quickview' -%}
         <span>{{ 'products.product.quickview_text' | t }}</span>
       </span>
 
       {%- if settings.enable_compare -%}
       <span data-tooltip="true" data-placement="top" class="btn gradient-theme-vertical product-card__overlay-btn js-btn-compare" title="{{ 'products.product.compare_text' | t }}" data-handle="{{product.handle}}">
-        {%- include 'icon-exchange' -%}
-        {%- include 'icon-close' -%}
+        {%- render 'icon-exchange' -%}
+        {%- render 'icon-close' -%}
         <span>{{ 'products.product.compare_text' | t }}</span>
       </span>
       {%- endif -%}
       {%- if settings.enable_wishlsit -%}
       <span data-toggle="tooltip" data-placement="top" data-tooltipalltimes="true" class="btn gradient-theme-vertical product-card__overlay-btn js-btn-wishlist" title="{{ 'products.product.wishlist_text' | t }}" data-handle="{{product.handle}}">
-        {%- include 'icon-heart' -%}
+        {%- render 'icon-heart' -%}
       </span>
       {%- endif -%}
     </div>
