--- a/snippets/breadcrumb.liquid
+++ b/snippets/breadcrumb.liquid
@@ -57,7 +57,7 @@
 {% elsif template contains 'product' and collection.handle %}	
   {% assign bgimage = collection.image.src %}
 {% endif %}
-<nav class="breadcrumbs-{{settings.style_breadcrumb}} breadcrumb g-breadcrumb lazyload text-{{settings.align_bread}}" role="navigation" aria-label="breadcrumbs" {% unless settings.style_breadcrumb == "style_1" %}data-bgset="{%- include 'bgset', image: bgimage -%}"  data-sizes="auto"
+<nav class="breadcrumbs-{{settings.style_breadcrumb}} breadcrumb g-breadcrumb lazyload text-{{settings.align_bread}}" role="navigation" aria-label="breadcrumbs" {% unless settings.style_breadcrumb == "style_1" %}data-bgset="{%- render 'bgset', image: bgimage -%}"  data-sizes="auto"
 data-parent-fit="cover" {% endunless%}>
   <div class="{{settings.layout_bread}}">
   {% if settings.show_title_breadcumbs %}
@@ -68,7 +68,7 @@ data-parent-fit="cover" {% endunless%}>
     {% elsif template contains 'product' and collection.handle %}	
       <h3 class="mb-2 h2 br-title">{{ page.title }}</h3>
     {% elsif template contains 'blog' %}	
-      <h3 class="mb-2 h2 br-title">{{ blog.title }} {%- include 'icon-rss' -%}</h3>
+      <h3 class="mb-2 h2 br-title">{{ blog.title }} {%- render 'icon-rss' -%}</h3>
     {% endif %}
   {% endif %}
   </div>
