--- a/snippets/cross-sell.liquid
+++ b/snippets/cross-sell.liquid
@@ -3,13 +3,13 @@
   <div class="modal-dialog modal-dialog--crosssell modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">{%- include 'icon-close' -%}</button>
+        <button type="button" class="close" data-dismiss="modal">{%- render 'icon-close' -%}</button>
       </div>
       <div class="modal-body">
         <div class="row row-crosssell">
           <div class="col-lg-4 col-md-6">
             <div class="js-cross-added"></div>
-            {%- include 'free-shipping' -%}
+            {%- render 'free-shipping' -%}
           </div>
           <div class="col-lg-4 cross-cart-items">
             <div class="js-mini-cart-content"></div>
