--- a/snippets/product-grid-2.liquid
+++ b/snippets/product-grid-2.liquid
@@ -6,15 +6,15 @@
       {%- assign img_url = image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
       <img class="lazyload"
            data-src="{{ img_url }}"
-           src="{%- include 'srcBlank' -%}"
+           src="{%- render 'srcBlank' -%}"
            data-sizes="auto"
            alt="{{ image.alt | escape }}">
-           {% include 'second-image'%}
+           {% render 'second-image'%}
     </a>
 
     
 
-    {%- if settings.enable_countdown_card -%}{%- include 'product-countdown' -%}{%- endif -%}
+    {%- if settings.enable_countdown_card -%}{%- render 'product-countdown' -%}{%- endif -%}
     {%- if settings.enablevideo -%}
       {% for media in product.media %}
         {% render 'productVideo', media: media %}
@@ -22,7 +22,7 @@
     {%- endif -%}
     
 	
-    {% include 'product-label' %}
+    {% render 'product-label' %}
   </div>
   <div class="product-card__info">
 
@@ -57,6 +57,6 @@
       {{ 'products.product.sold_out' | t }}
     </div>
     {%- endif -%}
-    {%- include 'swatch-grid-2' -%}
+    {%- render 'swatch-grid-2' -%}
   </div>
 </div>
