--- a/snippets/productSizeGuide.liquid
+++ b/snippets/productSizeGuide.liquid
@@ -9,7 +9,7 @@
   <div class="modal-dialog modal-dialog--sizeguide modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">{%- include 'icon-close' -%}</button>
+        <button type="button" class="close" data-dismiss="modal">{%- render 'icon-close' -%}</button>
       </div>
       <div class="modal-body px-4 pb-4 pt-2">
         <h4 class="text-center hide">{{pageSizeGudie.title}}</h4>
