--- a/snippets/shortcode-accordion.liquid
+++ b/snippets/shortcode-accordion.liquid
@@ -1,7 +1,7 @@
-{% capture accordion %}{% include 'shortcode-render' render:'action' %}{% endcapture %}
-{% capture accordionTitle %}{% include 'shortcode-render' render:'title' default:'Accordion Title'%}{% endcapture %}
-{% capture accordionActive %}{% include 'shortcode-render' render:'active' default:'0'%}{% endcapture %}
-{% capture accordionClass %}{% include 'shortcode-render' render:'class' default:'' %}{% endcapture %}
+{% capture accordion %}{% render 'shortcode-render' render:'action' %}{% endcapture %}
+{% capture accordionTitle %}{% render 'shortcode-render' render:'title' default:'Accordion Title'%}{% endcapture %}
+{% capture accordionActive %}{% render 'shortcode-render' render:'active' default:'0'%}{% endcapture %}
+{% capture accordionClass %}{% render 'shortcode-render' render:'class' default:'' %}{% endcapture %}
 {% case accordion %}
 {% when 'new accordions' %}
 {% capture shortCodeId %}{{shortCodeId}}-{{ 'now' | date: "%N" }}{% endcapture %}
@@ -18,7 +18,7 @@
       <a data-toggle="collapse" data-parent="#accordion-{{shortCodeId | split : '-' | last}}" href="#collapse{{headingId}}">
         {% if accordionTitle != '' %}{{accordionTitle}}{% endif %}
       </a>
-      {% include 'icon-arrow-down' %}
+      {% render 'icon-arrow-down' %}
     </h5>
   </div>
   <div id="collapse{{headingId}}" class="collapse{% if accordionActive == '1' %} show {% endif %}" role="tabpanel" aria-labelledby="heading-{{headingId}}">
