--- a/snippets/shortcode-instagram.liquid
+++ b/snippets/shortcode-instagram.liquid
@@ -1,16 +1,16 @@
-{% capture class %}{% include 'shortcode-render' render:'class' default:'' %}{% endcapture %}
-{% capture block_title %}{% include 'shortcode-render' render:'title' default:'' %}{% endcapture %}
-{% capture instagram_clientId %}{% include 'shortcode-render' render:'clientId' default:'f771ffd9812544e99d187d82867f84a2' %}{% endcapture %}
-{% capture instagram_accessToken %}{% include 'shortcode-render' render:'accessToken' default:'' %}{% endcapture %}
-{% capture instagram_get %}{% include 'shortcode-render' render:'get' default:'popular' %}{% endcapture %}
-{% capture instagram_tag %}{% include 'shortcode-render' render:'tagName' default:'' %}{% endcapture %}
-{% capture instagram_locationId %}{% include 'shortcode-render' render:'locationId' default:'' %}{% endcapture %}
-{% capture instagram_userId %}{% include 'shortcode-render' render:'userId' default:'' %}{% endcapture %}
-{% capture instagram_limit %}{% include 'shortcode-render' render:'limit' default:'8' %}{% endcapture %}
-{% capture instagram_slick %}{% include 'shortcode-render' render:'slick' default:'enable' %}{% endcapture %}
-{% capture instagram_column %}{% include 'shortcode-render' render:'column' default:'4' %}{% endcapture %}
-{% capture instagram_row %}{% include 'shortcode-render' render:'row' default:'1' %}{% endcapture %}
-{% capture instagram_resolution %}{% include 'shortcode-render' render:'resolution' default:'low_resolution' %}{% endcapture %}
+{% capture class %}{% render 'shortcode-render' render:'class' default:'' %}{% endcapture %}
+{% capture block_title %}{% render 'shortcode-render' render:'title' default:'' %}{% endcapture %}
+{% capture instagram_clientId %}{% render 'shortcode-render' render:'clientId' default:'f771ffd9812544e99d187d82867f84a2' %}{% endcapture %}
+{% capture instagram_accessToken %}{% render 'shortcode-render' render:'accessToken' default:'' %}{% endcapture %}
+{% capture instagram_get %}{% render 'shortcode-render' render:'get' default:'popular' %}{% endcapture %}
+{% capture instagram_tag %}{% render 'shortcode-render' render:'tagName' default:'' %}{% endcapture %}
+{% capture instagram_locationId %}{% render 'shortcode-render' render:'locationId' default:'' %}{% endcapture %}
+{% capture instagram_userId %}{% render 'shortcode-render' render:'userId' default:'' %}{% endcapture %}
+{% capture instagram_limit %}{% render 'shortcode-render' render:'limit' default:'8' %}{% endcapture %}
+{% capture instagram_slick %}{% render 'shortcode-render' render:'slick' default:'enable' %}{% endcapture %}
+{% capture instagram_column %}{% render 'shortcode-render' render:'column' default:'4' %}{% endcapture %}
+{% capture instagram_row %}{% render 'shortcode-render' render:'row' default:'1' %}{% endcapture %}
+{% capture instagram_resolution %}{% render 'shortcode-render' render:'resolution' default:'low_resolution' %}{% endcapture %}
 {% capture prolistID %}instagram-{{ 'now' | date: "%N" }}{% endcapture %}
 {% assign id = prolistID %}
 <div class="instagram-block {{ class }}" 
