--- a/snippets/shortcode-youtube.liquid
+++ b/snippets/shortcode-youtube.liquid
@@ -1,3 +1,3 @@
 <div class="video-container">
-  <iframe class="lazyload" width="{% include 'shortcode-render' render:'width' default:'640' %}" height="{% include 'shortcode-render' render:'height' default:'390' %}" src="//www.youtube.com/embed/{% include 'shortcode-render' render:'video' default:'M7lc1UVf-VE' %}" ></iframe>
+  <iframe class="lazyload" width="{% render 'shortcode-render' render:'width' default:'640' %}" height="{% render 'shortcode-render' render:'height' default:'390' %}" src="//www.youtube.com/embed/{% render 'shortcode-render' render:'video' default:'M7lc1UVf-VE' %}" ></iframe>
 </div>
