--- a/snippets/sidebar-option-category.liquid
+++ b/snippets/sidebar-option-category.liquid
@@ -9,7 +9,7 @@
     <ul  class="list-unstyled show ul_list_categories">
       {%- if settings.categories_block_items == blank -%}
         {%- for category in collections limit:settings.categories_block_number -%}
-        <li class="lazyload"  {% if section.settings.enable_image_cate %} data-bgset="{%- include 'bgset', image: category.image.src -%}"  data-sizes="auto"
+        <li class="lazyload"  {% if section.settings.enable_image_cate %} data-bgset="{%- render 'bgset', image: category.image.src -%}"  data-sizes="auto"
         data-parent-fit="cover" {% endif %}>
             <a href="{{ category.url }}" title="{{ category.title }}" class="justify-content-between d-flex align-items-center" >
             {{ category.title }}
