--- a/snippets/swatch-grid-1.liquid
+++ b/snippets/swatch-grid-1.liquid
@@ -8,7 +8,7 @@
     {%- assign arrayVariants = arrayVariants | append: variant.image -%}
         {%- if variant.image != blank -%}
           <li data-tooltip="true" data-tooltipalltimes="true" class="js-swatch-card-item" title="{{variant.title}}" data-url="{{variant.url | within: collection}}" data-id="{{variant.id}}" data-image="{{ variant.image | img_url: 'large' }}" data-price="{{variant.price}}">
-            <img data-sizes="auto" src="{%- include 'srcBlank' -%}" class="lazyload" data-src="{{variant.image | img_url: '100x'}}" alt="{{variant.image.alt}}" />
+            <img data-sizes="auto" src="{%- render 'srcBlank' -%}" class="lazyload" data-src="{{variant.image | img_url: '100x'}}" alt="{{variant.image.alt}}" />
           </li>
           {%- assign counter = counter | plus:1 -%}
         {%- endif -%}
