--- a/snippets/upsell.liquid
+++ b/snippets/upsell.liquid
@@ -5,7 +5,7 @@
   <div class="modal-dialog modal-dialog--upsell modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">{%- include 'icon-close' -%}</button>
+        <button type="button" class="close" data-dismiss="modal">{%- render 'icon-close' -%}</button>
       </div>
       <div class="modal-body p-4 pb-5">
         <p class="upsell-promotion">{{product.metafields.info.promotion}}</p>
